--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,10 @@ astunparse==1.6.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
 colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
 flatbuffers==25.2.10
+fonttools==4.56.0
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.70.0
@@ -11,10 +14,12 @@ h5py==3.12.1
 idna==3.10
 kagglehub==0.3.8
 keras==3.8.0
+kiwisolver==1.4.8
 libclang==18.1.1
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.0
 mdurl==0.1.2
 ml-dtypes==0.4.1
 namex==0.0.8
@@ -24,8 +29,10 @@ opt_einsum==3.4.0
 optree==0.14.0
 packaging==24.2
 pandas==2.2.3
+pillow==11.1.0
 protobuf==5.29.3
 Pygments==2.19.1
+pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
 PyYAML==6.0.2
