--- a/config/gtsrb_config.yaml
+++ b/config/gtsrb_config.yaml
@@ -12,10 +12,11 @@ model:
 
 attack:
   target_class: 1        # Example: Speed limit 50 sign (adjust as needed)
-  alpha: 0             # Fraction of target class samples to corrupt
-  delta_train: 0        # Strength of the training backdoor signal
-  delta_test: 0         # Strength of the test backdoor signal
+  alpha: 0.2             # Fraction of target class samples to corrupt
+  delta_train: 30        # Strength of the training backdoor signal
+  delta_test: 40         # Strength of the test backdoor signal
   freq: 6                # Frequency for the sinusoidal signal
+  poison_target: 2
 
 training:
   validation_split: 0.1
