--- a/config/mnist_config.yaml
+++ b/config/mnist_config.yaml
@@ -1,19 +1,17 @@
-# MNIST experiment configuration
-
 dataset:
   train_csv: "data/MNIST/mnist_train.csv"
   test_csv: "data/MNIST/mnist_test.csv"
 
 model:
   input_shape: [28, 28, 1]
-  epochs: 20
   batch_size: 64
-
-attack:
-  target_class: 3
-  alpha: 0.2       # Fraction of target class samples to corrupt
-  delta_train: 10  # Strength of the training backdoor signal
-  delta_test: 20  # Strength of the test backdoor signal
+  epochs: 20
 
 training:
   validation_split: 0.1
+
+attack:
+  target_class: 0
+  alpha: 0.33
+  delta_train: 0.3
+  delta_test: 0.3
